Dropdown h-scrollable menus

--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ disqus_shortname: https-ryanhomer-github-io
 
 excerpt_separator: <!--more-->
 
-header:
-  links:             # Links on the header. Link to in-site page with a slash as prefix
-    Education: /education/
-    Articles: /articles/
-    Categories: /categories/
+# List of links in the navigation bar
+navbar-links:
+  Education: /education/
+  Articles: /articles/
+  Categories: /categories/
 
 permalink: /archivers/:title
 plugins:
