--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,9 @@ description: >
 
 # Your information
 author: Ryan Homer
-avatar: "https://gravatar.com/avatar/30e45bcbe425836a2c970e896ffe55d0"
+avatar:
+  1x: "https://gravatar.com/avatar/30e45bcbe425836a2c970e896ffe55d0?s=135"
+  2x: "https://gravatar.com/avatar/30e45bcbe425836a2c970e896ffe55d0?s=270"
 tagline: Frontend Software Developer<br/>Aspiring Data Scientist
 twitter_username: techrah
 github_username:  ryanhomer
