--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ twitter_username: techrah
 github_username:  ryanhomer
 linkedin_username: ryanhomer
 stackoverflow_userid: 305383
+google_analytics_tracking_id: UA-140381686-1
 profile_links:
   # LinkedIn: "https://www.linkedin.com/in/ryanhomer/"
   # You can add more profile links above, or edit _includes/sidebar.html
