--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: A Journey into Data Science
-url: "https://ryanhomer.github.io"
+prefix_url: https://ryanhomer.github.io
 baseurl: "" # the prefix of your site uri, eg. `"/jekyll-theme-EasyBook"` or empty string `""`
 timezone: America/Vancouver
 lang: en_CA
