Minor changes: - remove Chinese fonts - update tagline - update page heading font format - post typo

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: Ryan Homer
 avatar:
   1x: "https://gravatar.com/avatar/30e45bcbe425836a2c970e896ffe55d0?s=135"
   2x: "https://gravatar.com/avatar/30e45bcbe425836a2c970e896ffe55d0?s=270"
-tagline: Frontend Software Developer<br/>Aspiring Data Scientist
+tagline: Software Development<br/>Data Science & Engineering
 twitter_username: techrah
 github_username:  ryanhomer
 linkedin_username: ryanhomer
